--- a/css/styles.css
+++ b/css/styles.css
@@ -464,7 +464,7 @@ box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     letter-spacing: 0.06em;
   
 }
-.menu-img p {
+.menu-img-name p {
 font-size: 16px;
 line-height: 1.9;
 letter-spacing: 0.03em;
