--- a/css/styles.css
+++ b/css/styles.css
@@ -547,7 +547,11 @@ margin-bottom: 20px;
     left: 50%;
     transform: translate(-50%,-50%) rotate(0deg);
     transition: transform 500ms linear;
+    padding: 40px;
   
+}
+.modal-close-icon{
+    fill: currentColor;
 }
 .modal-btn {
     border: 1px solid #999999;
@@ -567,5 +571,38 @@ margin-bottom: 20px;
     opacity: 0;
     pointer-events: none;
 }
+.modal-form-head {
+    font-size: 18px;
+    font-weight: 700px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+.modal-form-field {
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    margin-top: 6px;
+    padding-left: 30px;
+    border: 1px solid rgba(33, 33, 33, 8.2);
+    border-radius: 4px;
+}
+.modal-form-message {
+    width: 100%;
+    height: 120px;
+    margin-top: 6px;
+    padding: 12px 16px;
+    border: 1px solid rgba(33, 33, 33, 8.2);
+    border-radius: 4px;
+    resize: none;
+
+}
+
+
+
+
    
 
