--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,17 @@ ul {
     padding: 0px 15px 0px 15px;
     margin: 0 auto;
 }
-
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);margin: 1px;
+}
 
 /* header */
 .top-header {
@@ -536,8 +546,8 @@ margin-bottom: 20px;
 
 .modal {
     position: absolute;
-    width: 500px;
-    min-height: 600px;
+    width: 528px;
+    min-height: 581px;
     background-color: #FFFFFF;
     border-radius: 10px;
     top: 50%;
@@ -602,18 +612,19 @@ margin-bottom: 20px;
 }
 .modal-form-icon {
     display: block;
+    text-align: center;
     width: 18px;
     height: 18px;
     position: absolute;
     top: 50%;
     left: 12px;
     transform: translateY(-50%);
-    background-color: teal;
+    /* background-color: teal; */
     transition: border-color 250ms linear;
 
 }
 .modal-form-input:focus+ .modal-form-icon {
-    background-color: #2196F3;
+    fill: #2196F3;
 }
 
 .modal-form-message {
@@ -635,20 +646,54 @@ margin-bottom: 20px;
 .modal-form-message:focus {
     outline: none;
     border-color: #2196F3;
+}
 
+.modal-form-checkbox-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+.modal-form-checkbox-label > a {
+    text-decoration: underline;
+    color: #2196F3;
+}
 .modal-form-checkbox-label::before {
     display: block;
     content: "";
-    width: 18px;
-    height: 18px;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
     border: 1px solid #303030;
     cursor: pointer;
 }
-.modal-form-checkbox:checked + .
-modal-form-checkbox-label::before {
-    background-color: var(--accent-color);
+.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
+    background-color: red;
     box-shadow: inset 0 0 0 4px #ffffff;
 }
+.modal-form-checkbox:focus + 
+.modal-form-checkbox-label::before {
+   outline: 2px solid #188CE8;
+}
+.modal-form-button {
+    position: relative;
+    left: 30%;
+    padding: 10px 55px 10px 55px;
+    background: #2196F3;
+    box-shadow: 0 cpx 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+.modal-form-button:hover,
+.modal-form-button:focus {
+     background-color: #188CE8;
 
 
 
