--- a/css/styles.css
+++ b/css/styles.css
@@ -535,6 +535,59 @@ text-transform: uppercase;
 color: #FFFFFF;
 margin-bottom: 20px;
 }
+/* footer subscrib */
+.footer-subscrib {    
+    display: flex;
+    align-items: flex-end;    
+    margin-left: 93px;  
+    }
+.mail-field-label {
+    
+    font-family: inherit;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.mail-field > input {
+    width: 100%;  
+    margin-top: 20px;
+    background-color: inherit;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    padding: 15px;
+    font-size: 16px;
+    color: #ffffff;
+}
+.btn-subscrib {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 12px;
+    max-height: 50px;
+    padding: 10px 28px 10px 28px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.2;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+.send-icon {
+    fill: #ffffff;
+    margin-left: 10px;
+}
+.btn-subscrib:hover,
+.btn-subscrib:focus {
+     background-color: #188CE8;
+}    
+/* modal */
+
 .backdrop {
     width: 100vw;
     height: 100vh;
@@ -572,6 +625,13 @@ margin-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    fill: currentColor;
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+.modal-btn > .modal-close-icon:hover,
+.modal-btn > .modal-close-icon:focus {
+    fill: #2196F3;
 }
 .backdrop.is-hidden {
     visibility: hidden;
@@ -579,15 +639,18 @@ margin-bottom: 20px;
     pointer-events: none;
 }
 .modal-form-head {
-    font-size: 18px;
-    font-weight: 700px;
+    font-size: 20px;
+    font-weight: 700;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 12px;
+    color: inherit;
+    letter-spacing: 0.03em;
 }
 .modal-form-field {
-    font-size: 14px;
-    font-weight: 400;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    font-size: 12px;
+    line-height: 1.2;
+    color: #757575;
  
 }
 .modal-form-wrapper {
@@ -600,7 +663,7 @@ margin-bottom: 20px;
     width: 100%;
     height: 40px;
     padding-left: 42px;
-    border: 1px solid rgba(33, 33, 33, 8.2);
+    border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     transition: border-color 250ms linear;
 
@@ -620,7 +683,7 @@ margin-bottom: 20px;
     left: 12px;
     transform: translateY(-50%);
     /* background-color: teal; */
-    transition: border-color 250ms linear;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .modal-form-input:focus+ .modal-form-icon {
@@ -632,22 +695,28 @@ margin-bottom: 20px;
     height: 120px;
     margin-top: 6px;
     padding: 12px 16px;
-    border: 1px solid rgba(33, 33, 33, 8.2);
+    border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     resize: none;
-    transition: border-color 250ms linear;
+    font-size: 14px;
+    line-height: 1.2;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .modal-form-message::placeholder {
-    text-transform: uppercase;
-    color: rgba(117, 117, 117, 0. 5);
-
+    /* text-transform: uppercase; */
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
 }
 .modal-form-message:focus {
     outline: none;
     border-color: #2196F3;
 }
-
+.accept-policy {
+    margin-top: 20px;
+}
 .modal-form-checkbox-label {
     display: flex;
     align-items: center;
@@ -668,6 +737,7 @@ margin-bottom: 20px;
     border: 1px solid #303030;
     cursor: pointer;
 }
+
 .modal-form-checkbox:checked + .modal-form-checkbox-label::before {
     background-color: red;
     box-shadow: inset 0 0 0 4px #ffffff;
