--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,8 @@ ul {
     border: 0;
     padding: 0;
     clip: rect(0 0 0 0);
-    clip-path: inset(50%);margin: 1px;
+    clip-path: inset(50%);
+    margin: 1px;
 }
 
 /* header */
@@ -732,15 +733,21 @@ margin-bottom: 20px;
     display: block;
     content: "";
     width: 16px;
-    height: 16px;
+    height: 15px;
     margin-right: 8px;
-    border: 1px solid #303030;
+    border: 2px solid #212121;
+    border-radius: 2px;
     cursor: pointer;
 }
 
 .modal-form-checkbox:checked + .modal-form-checkbox-label::before {
-    background-color: red;
-    box-shadow: inset 0 0 0 4px #ffffff;
+    background-color: #2196F3;
+    background-image: url(../img/check.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-color: #2196F3;
+
 }
 .modal-form-checkbox:focus + 
 .modal-form-checkbox-label::before {
