--- a/css/styles.css
+++ b/css/styles.css
@@ -612,10 +612,10 @@ margin-bottom: 20px;
   
 }
 .modal-close-icon{
-    fill: currentColor;
+    fill: #000000;
 }
 .modal-btn {
-    border: 1px solid #999999;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: transparent;
     width: 30px;
     height: 30px;
@@ -630,8 +630,7 @@ margin-bottom: 20px;
     cursor: pointer;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-.modal-btn > .modal-close-icon:hover,
-.modal-btn > .modal-close-icon:focus {
+.modal-btn > .modal-close-icon:hover, .modal-btn > .modal-close-icon:focus {
     fill: #2196F3;
 }
 .backdrop.is-hidden {
@@ -754,8 +753,9 @@ margin-bottom: 20px;
    outline: 2px solid #188CE8;
 }
 .modal-form-button {
-    position: relative;
-    left: 30%;
+    position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
     padding: 10px 55px 10px 55px;
     background: #2196F3;
     box-shadow: 0 cpx 4px 4px rgba(0, 0, 0, 0.15);
